kube/ingress-c/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: apple.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 80
